--- a/index.html
+++ b/index.html
@@ -83,16 +83,7 @@
             font-size: 1.6em;
         }
 
-        /* Yellow 6-Month Challenge Container */
-        .yellow-container {
-            background-color: yellow;
-            padding: 20px;
-            margin: 20px auto;
-            width: 80%;
-            max-width: 600px;
-            text-align: center;
-            border-radius: 8px;
-            font-size: 1.5em;
+
         }
 
         /* Form Styling */
@@ -218,11 +209,10 @@
         <h1>Master Business French – Boost Your Career with Confidence!</h1>
         <h2>Affordable, flexible lessons tailored to professionals</h2>
     </section>
-
-    <!-- Yellow 6-Month Challenge Section -->
-    <section class="yellow-container">
-        6-Month Package – Get Started Today!
-    </section>
+ <!-- Image Placeholder for Hero Section -->
+        <div style="text-align:center;">
+            <img src="ME3" alt="French Business Meeting" style="width:100%; max-width:600px; margin-bottom: 20px;">
+        </div>
 
     <!-- Contact Form Section -->
     <section class="form-container">
@@ -267,7 +257,7 @@
     </section>
 
     <!-- Redirect Icon Button for 6 Months Challenge Details -->
-    <a href="6-Months-Challenge-Details.html">
+    <a href="6 MONTHS CHALLENGE DETAILS.html">
         <button class="icon-btn">🔗</button>
     </a>
 
@@ -275,15 +265,7 @@
 
 </html>
 
-            <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
-            <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;" rows="5"></textarea>
-
-            <label for="date" style="display: block; margin-bottom: 12px; font-weight: bold;">Book your first lesson free of charge</label>
-            <input type="date" id="date" name="date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
-
-            <button type="Book now" style="background-color: #333; color: white; padding: 15px; font-size: 1.2em; width: 100%; border: none; border-radius: 5px; cursor: pointer;">Submit</button>
-        </form>
-    </section>
+        
      <!-- Image Placeholder for Hero Section -->
         <div style="text-align:center;">
             <img src="ME2" alt="French Business Meeting" style="width:100%; max-width:600px; margin-bottom: 20px;">
