--- a/index.html
+++ b/index.html
@@ -252,14 +252,19 @@
             <label for="first-lesson">First Free Lesson Scheduling</label>
             <input type="date" id="first-lesson" name="first-lesson" required>
 
+            <label for="Ask question">or Ask a question and we'll get back to you in the next 24!</label>
+            <input type="text" id="Ask question" name="Ask question" placeholder="e.g., ..." not required>
+
+
             <button type="submit">Submit</button>
         </form>
     </section>
 
-    <!-- Redirect Icon Button for 6 Months Challenge Details -->
-    <a href="6 MONTHS CHALLENGE DETAILS.html">
-        <button class="icon-btn">🔗</button>
-         🚨 Click Here to Learn About the 6-Month Challenge Beginner's Edition 🚨
+   <div class="challenge-container">
+    <span class="challenge-text">🚨 Click Here to Learn About the 6-Month Challenge Beginner's Edition 🚨</span>
+    <a href="6 MONTHS CHALLENGE DETAILS.html" class="challenge-link">Learn More</a>
+</div>
+
 </div>
     </a>
 
