--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
     <!-- Hero Section -->
     <section id="hero">
         <h1>Master Business French – Boost Your Career with Confidence!</h1>
-        <h2>Affordable, flexible lessons tailored to professionals</h2>
+        <h2>Affordable, flexible lessons tailored to professionals
+        90 = 19euros NO MORE </h2>
     </section>
  <!-- Image Placeholder for Hero Section -->
         <div style="text-align:center;">
