--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <a href="#student-needs">Understanding Your Challenges</a>
             <a href="#services">Services</a>
             <a href="#testimonials">Testimonials</a>
+            <a href="#6 MONTHS CHALLENGE">6 MONTHS CHALLENGE</a>
         </div>
     </nav>
 
@@ -255,11 +256,6 @@
             <button type="submit">Submit</button>
         </form>
     </section>
-
-   <div class="challenge-container">
-    <span class="challenge-text">🚨 Click Here to Learn About the 6-Month Challenge Beginner's Edition 🚨</span>
-    <a href="6 MONTHS CHALLENGE DETAILS.html" class="challenge-link">Learn More</a>
-</div>
 
 </div>
     </a>
