--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <a href="#student-needs">Understanding Your Challenges</a>
             <a href="#services">Services</a>
             <a href="#testimonials">Testimonials</a>
-            <a href="#6 MONTHS CHALLENGE">6 MONTHS CHALLENGE</a>
+            <a href="#6 MONTHS CHALLENGE.html">6 MONTHS CHALLENGE</a>
         </div>
     </nav>
 
