--- a/index.html
+++ b/index.html
@@ -196,15 +196,14 @@
             <a href="#student-needs">Understanding Your Challenges</a>
             <a href="#services">Services</a>
             <a href="#testimonials">Testimonials</a>
-            <a href="#6 MONTHS CHALLENGE.html">6 MONTHS CHALLENGE</a>
+            <a href="6 MONTHS CHALLENGE.html">6 MONTHS CHALLENGE</a>
         </div>
     </nav>
 
     <!-- Hero Section -->
     <section id="hero">
         <h1>Master Business French – Boost Your Career with Confidence!</h1>
-        <h2>Affordable, flexible lessons tailored to professionals
-        90 = 19euros NO MORE </h2>
+        <h2>Affordable, flexible lessons tailored to professionals 90min = 19 euros </h2>
     </section>
  <!-- Image Placeholder for Hero Section -->
         <div style="text-align:center;">
