--- a/Tariffs.html
+++ b/Tariffs.html
@@ -71,6 +71,16 @@
             color: red;
         }
 
+        .yellow-highlight {
+            background-color: yellow;
+            font-weight: bold;
+            padding: 10px;
+            margin: 10px 0;
+            text-align: center;
+            font-size: 1.2em;
+            border-radius: 5px;
+        }
+
         .button-container {
             text-align: center;
             margin-top: 20px;
@@ -124,6 +134,10 @@
             </li>
         </ul>
         <p><strong>Languages Spoken by the Teacher:</strong> French, English, Arabic, and German.</p>
+        <!-- Highlighted link to the 6 Months Challenge GitHub page -->
+        <div class="yellow-highlight">
+            <a href="https://github.com/yourusername/6-MONTHS-CHALLENGE" target="_blank">Check out the 6 MONTHS CHALLENGE on GitHub!</a>
+        </div>
         <div class="button-container">
             <a href="index.html">Back to Home Page</a>
         </div>
