--- a/Tariffs.html
+++ b/Tariffs.html
@@ -134,9 +134,9 @@
             </li>
         </ul>
         <p><strong>Languages Spoken by the Teacher:</strong> French, English, Arabic, and German.</p>
-        <!-- Highlighted link to the 6 Months Challenge GitHub page -->
+        <!-- Highlighted link to the 6 Months Challenge BEGINNERS EDITION -->
         <div class="yellow-highlight">
-            <a href="https://github.com/yourusername/6-MONTHS-CHALLENGE" target="_blank">Check out the 6 MONTHS CHALLENGE on GitHub!</a>
+           <a href="6 MONTHS CHALLENGE.html">6 MONTHS CHALLENGE/a>">Check out the 6 MONTHS CHALLENGE BEGINNERS EDITION!</a>
         </div>
         <div class="button-container">
             <a href="index.html">Back to Home Page</a>
