--- a/teacher-info.html
+++ b/teacher-info.html
@@ -152,25 +152,25 @@
     <!-- Image Section -->
     <img id="teacher-image" src="IMG_2556.jpg" alt="Teacher Image">
 
-    <!-- Introduction Section -->
-    <section id="intro">
-        <h2>About Me</h2>
-        <p><strong>Une description n'est qu'un maquillage.</strong><br>
-        Let’s meet so you can form your own opinion of me. <br><br>
+   <!-- Introduction Section -->
+<section id="intro">
+    <h2>About Me</h2>
+    <p><strong>Une description n'est qu'un maquillage.</strong><br>
+    Let’s meet so you can form your own opinion of me. <br><br>
 
+    I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish, of Algerian origin, currently living in Austria. I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. I specialize in working with professionals like you, tailoring lessons for busy schedules and specific career goals, such as mastering business French for fashion, client meetings, or socializing confidently. <br><br>
 
-        I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish. of Algerian origin but i live in Austria.I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. Over the years, I have had the privilege of working with professionals, diplomats, and students, tailoring lessons to help them achieve their language goals, whether for exams, career advancement, or personal enrichment. <br><br>
+    - <strong>Interactive Lessons:</strong> Role-playing business scenarios, improving grammar, and perfecting pronunciation to suit your unique needs. <br>
+    - <strong>Flexible Schedule:</strong> Morning or weekend lessons to fit your lifestyle. <br>
+    - <strong>Passion for Writing:</strong> My love for creative writing inspires a dynamic approach to teaching, making lessons engaging and relatable. <br><br>
 
-        - I am passionate about writing, particularly fiction. <br>
-        - In my free time, I enjoy playing basketball and traveling. <br><br>
+    Whether your goal is fluency, confidence, or professional growth, I’m here to guide you with patience, adaptability, and a touch of creativity. <br><br>
 
-        While I may not know exactly why you chose French, I do believe, as Duffy sings in <em>Mercy</em>,<br>
-        “I don’t know what you do, but you do it well.” <br><br>
+    Let’s make French a skill you excel at—because as Duffy sings in <em>Mercy</em>,<br>
+    “I don’t know what you do, but you do it well.” <br><br>
+    </p>
+</section>
 
-        I also have a love for books—whether reading them or simply collecting them. <br><br>
-
-        Good luck!</p>
-    </section>
 
     <!-- Footer -->
     <footer>
