--- a/teacher-info.html
+++ b/teacher-info.html
@@ -158,7 +158,7 @@
     <p><strong>Une description n'est qu'un maquillage.</strong><br>
     Let’s meet so you can form your own opinion of me. <br><br>
 
-    I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish, of Algerian origin, currently living in Austria. I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. I specialize in working with professionals like you, tailoring lessons for busy schedules and specific career goals, such as mastering business French for fashion, client meetings, or socializing confidently. <br><br>
+    I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish, of Algerian origin, currently living in Austria. I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. I specialize in working with professionals like you, tailoring lessons for busy schedules and specific career goals, such as mastering business French for fashion,customer service, client meetings,trade and export,diplomatic speech or socializing confidently. <br><br>
 
     - <strong>Interactive Lessons:</strong> Role-playing business scenarios, improving grammar, and perfecting pronunciation to suit your unique needs. <br>
     - <strong>Flexible Schedule:</strong> Morning or weekend lessons to fit your lifestyle. <br>
